<resources>


    //MAIN ACTIVITY
    <string name="app_name">House Chore App</string>
    <string name="signin">Sign In</string>
    <string name="login">Let\'s go!</string>
    <string name="title_activity_drawer">drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_tasks">Tasks</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Shopping</string>
    <string name="tab_text_2">Tasks</string>
    <string name="tab_text_3">People</string>
    <string name="open_chores">Open Chores</string>
    <string name="shopping_list">Shopping List</string>
    <string name="schedule">Schedule</string>
    <string name="people">People</string>
    <string name="settings">Settings</string>
    <string name="rewards">Rewards Dashboard</string>
    <string name="others">Others</string>
    <string name="account">Account</string>
    <string name="setting">Setting</string>
    <string name="logout">Log Out</string>
    <string name="user_name">User Name</string>
    <string name="number_of_open_chores">Number of Open Chores:</string>
    <string name="enter_chore_name">Enter Chore Name</string>
    <string name="enter_note">Enter Note</string>
    <string name="edit_chore_name">Edit Chore Name</string>
    <string name="edit_note">Edit Note</string>
    <string name="edit_due_date">Edit Due Date</string>
    <string name="enter_assignee">Enter Assignee</string>
    <string name="housechore">Housechore</string>
    <string name="enter_due_date">Enter Due Date</string>
    <string name="enter_priority">Enter Priority</string>
    <string name="enter_category">Enter Category</string>
    <string name="enter_rewards">Enter Rewards</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="add_new_chore">Add New Chore</string>
    <string name="family_member_name">Family Member Name</string>
    <string name="family_member_user_role">Family Member User Role</string>
    <string name="add_family_member">Add a New Family Member!</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="select_a_role">Select a role</string>
    <string name="add_the_mother_fucker">Add the mother fucker</string>
    <string name="my_profile">My Profile</string>
    <string name="family_members">Family Members</string>
    <string name="wash_coco">Wash Coco</string>
    <string name="due_date">Due Date</string>
    <string name="assignee">Assignee:</string>
    <string name="yuhan">Yuhan</string>
    <string name="category">Category</string>
    <string name="pet">Pet</string>
    <string name="enter_password">Password Please</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_nick_name">Enter Nick Name</string>
    <string name="select_a_new_avatar">Select a new avatar!</string>
    <string name="update_your_info">Update your info!</string>
    <string name="verify_password">* Verify Password</string>
    <string name="confirm_delete">The Chore %1$s will be deleted. Please confirm.</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="assign">Assign</string>

    <string name="assignTo_options">Who would you like to assign this chore to?</string>
    <string name="error_user_exists">Users already exist</string>
    <string name="new_member_sign_up_here">New Member? Sign up here</string>
    <string name="gimme_an_email">Gimme an email</string>
    <string name="think_of_a_password">Think of a password</string>
    <string name="filter">Filter</string>
    <string name="only_show_my_tasks">Only Show My Tasks</string>
    <string name="assigned">Assigned</string>
    <string name="x">x</string>
    <string name="unassigned">Unassigned</string>
    <string name="priority_low">Priority (Low)</string>
    <string name="priority_high">Priority (High)</string>
    <string name="save_information">Save Information</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="accept_description">The Chore %1$s will be assigned to you.</string>
    <string name="note_description">Note: %1$s.</string>
    <string name="updatehousechore_hint">*All fields are required.</string>


    <string-array name="priority_array">
        <item> High </item>
        <item> Medium </item>
        <item> Low </item>
    </string-array>

    <string-array name="category_array">
        <item> Groceries </item>
        <item> Kitchen </item>
        <item> Washing </item>1
        <item> Pet </item>
        <item> Others </item>
    </string-array>

    <string-array name="reward_array">
        <item> 5 </item>
        <item> 3 </item>
        <item> 1 </item>
    </string-array>

    <string-array name="userRole_array">
        <item> Adult </item>
        <item> Child </item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resources">Resources</string>
    <string name="Welcome">welcome</string>
    <string name="enter_resource_name">Enter Resource Name</string>
    <string name="pick_a_role">Pick a role</string>
    <string name="assign_it_to_a_chore">Assign it to a chore</string>
    <string name="title_add_resource">I\'ve heard you wanted to add a resource?</string>
    <string name="title_edit_resource">You wanted to edit this resource?</string>
    <string name="edit_resource_name">Edit Resource Name</string>
    <string name="allocate_to_another_chore">Allocate to another chore</string>
    <string name="confirm">Confirm</string>
    <string name="postpone">Postpone</string>
    <string name="drawer_intro_text">Open the drawer on your left allows you to navigate through different parts of the app</string>
    <string name="drawer_caption">Let\'s do some chore</string>
    <string name="add_family_member_title">I heard you have a new member?</string>
    <string name="add_new_member">Add New Member</string>
    <string name="profile_disp_userName">User Name: </string>
    <string name="profile_disp_userRole">Role: </string>
    <string name="profile_disp_userEmail">Email: </string>
    <string name="profile_disp_userChores">Number of Chores: </string>
    <string name="profile_disp_userRewardPoints">Current reward points: </string>
    <string name="edit_chore_confirm">Would you like to postpone or confirm this chore?</string>
    <string name="assign_to">Assign To</string>
    <string name="edit">Edit</string>
    <string name="Signing_in">Signing in...</string>
    <string name="enter_email">Email Please</string>
    <string name="register">Register</string>
    <string name="existing_member_signin">Already a member? Sign in here</string>
</resources>
