<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_chores"
            android:icon="@drawable/assignment_icon"
            android:title="@string/open_chores" />
        <item
            android:id="@+id/nav_shoppingList"
            android:icon="@drawable/shoppinglist_icon"
            android:title="@string/shopping_list" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/schedule_icon"
            android:title="@string/schedule" />
        <item
            android:id="@+id/nav_people"
            android:icon="@drawable/people_icon"
            android:title="@string/people" />
        <item
            android:id="@+id/nav_reward"
            android:icon="@drawable/reward_icon"
            android:title="@string/rewards" />
    </group>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/setting_icon"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
