<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/list_layout"
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </LinearLayout>
        <RelativeLayout
            android:id="@+id/top_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/filterChore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:text="@string/filter" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/filterChore"
                android:layout_alignBottom="@+id/filterChore"
                android:layout_alignParentRight="true"
                android:layout_weight="1"
                android:text="@string/only_show_my_tasks" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/filter_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/top_container">

            <CheckBox
                android:id="@+id/assigned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assigned" />

            <Button
                android:id="@+id/hideFilter"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true"
                android:text="@string/x" />

            <CheckBox
                android:id="@+id/unassigned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/assigned"
                android:text="@string/unassigned" />

            <CheckBox
                android:id="@+id/priorityLow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/unassigned"
                android:text="@string/priority_low" />

            <CheckBox
                android:id="@+id/priorityHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/priorityLow"
                android:text="@string/priority_high" />

            <CheckBox
                android:id="@+id/categoryFilters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/priorityHigh"
                android:text="@string/category" />

        </RelativeLayout>

        <ListView
            android:id="@+id/housechore_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/searchBar" />

    </RelativeLayout>