<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/fragment_housechoreList"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.uottawa.plscuddleme.Tasks$PlaceholderFragment">

<EditText
    android:id="@+id/enter_chore_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/enter_chore_name" />

<EditText
    android:id="@+id/enter_assignee"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/enter_chore_name"
    android:inputType="date"
    android:hint="@string/enter_assignee" />
    <!--TODO: need to pick familyMember dynamically -->


<EditText
    android:id="@+id/enter_dueDate"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/enter_assignee"
    android:hint="@string/enter_due_date" />
    <!--TODO: need to get datepicker -->

    <Spinner
    android:id="@+id/enter_priority"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/enter_dueDate"
    android:entries="@array/priority_array"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"/>

<Spinner
    android:id="@+id/enter_category"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/enter_priority"
    android:entries="@array/category_array"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"/>
<!--TODO: default value of the text will have to be set to "select prioirty!-->
<!--https://stackoverflow.com/questions/867518/how-to-make-an-android-spinner-with-initial-text-select-one-->

<Spinner
    android:id="@+id/enter_rewards"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/enter_category"
    android:entries="@array/reward_array"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"/>

<Button
    android:id="@+id/addButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/enter_rewards"
    android:layout_centerInParent="true"
    android:text="@string/add" />


<TextView
    android:id="@+id/housechore_hint"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/addButton"
    android:text="@string/housechore"
    android:textAlignment="center"
    />


</RelativeLayout>