<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    tools:context="com.uottawa.plscuddleme.MainActivity">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true">


        <ImageView
        android:id="@+id/avatarPic"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/cute_pup" />

        <EditText
        android:id="@+id/enterEmail"
        android:hint="@string/enter_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textAlignment="center" />

        <EditText
        android:id="@+id/enterPassword"
        android:hint="@string/enter_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:ems="10"
        android:inputType="textPassword" />

        <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/signin" />

        <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/new_member_sign_up_here"/>
    </LinearLayout>
</RelativeLayout>

