<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_housechoreList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.uottawa.plscuddleme.Tasks$PlaceholderFragment">

    <EditText
        android:id="@+id/enter_chore_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/enter_chore_name" />

    <EditText
        android:id="@+id/enter_assignee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/enter_chore_name"
        android:hint="@string/enter_assignee" />
    <!--TODO: need to pick familyMember dynamically -->

    <EditText
        android:id="@+id/enter_dueDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/enter_assignee"
        android:hint="@string/enter_due_date"
        android:ems="10"
        android:inputType="date"/>

        <!--TODO: need to restrcit date not in the past -->

    <LinearLayout
        android:id="@+id/llSpinner"
        android:layout_below="@id/enter_dueDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/enter_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:entries="@array/priority_array"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/enter_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/category_array"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"/>
        <!--TODO: default value of the text will have to be set to "select prioirty!-->
        <!--https://stackoverflow.com/questions/867518/how-to-make-an-android-spinner-with-initial-text-select-one-->

        <Spinner
            android:id="@+id/enter_rewards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:entries="@array/reward_array"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/llSpinner">

        <Button
            android:id="@+id/buttonUpdateChore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update" />

        <Button
            android:id="@+id/buttonDeleteChore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_toRightOf="@+id/buttonUpdateChore"
            android:text="@string/delete" />


    </LinearLayout>

</RelativeLayout>