<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    tools:context="com.uottawa.plscuddleme.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <ImageView
            android:id="@+id/avatarPic"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/coco_photogen" />

        <TextView
            android:id="@+id/textViewUserEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Welcome"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/userNickName"
            android:hint="@string/enter_nick_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:ems="10"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/userEmail"
            android:hint="@string/enter_email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:ems="10"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/memberRole"
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:entries="@array/userRole_array"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/save_information" />

        <Button
            android:id="@+id/buttonLogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_gravity="center" />


    </LinearLayout>
</RelativeLayout>
