<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">


    <include
        layout="@layout/app_bar_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/drawerInner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:text="@string/Welcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button" />

        <ImageView
            android:id="@+id/imageViewMinionWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewWelcome"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/drawer_img" />

        <TextView
            android:id="@+id/textViewSaveTheWorld"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageViewMinionWelcome"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/drawer_caption"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button" />

        <TextView
            android:id="@+id/textViewDrawerDescription"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewSaveTheWorld"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/drawer_intro_text" />


        <TextView
            android:id="@+id/textViewButtonExplanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewDrawerDescription"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="This button lets you add a chore anytime" />


    </RelativeLayout>


    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_drawer"
        app:menu="@menu/activity_drawer" />

</android.support.v4.widget.DrawerLayout>
